--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -78,7 +78,7 @@ and open the template in the editor.
     $("form").on("submit", function (e) {
     e.preventDefault();
 
-window.location = 'http://localhost:8080/salvar?nome=' + $('#nome').val()+"&email="+$('#email').val()+"&datanasc="+$('#datanasc').val();  
+window.location = 'http://localhost:8080/pessoas/salvar?nome=' + $('#nome').val()+"&email="+$('#email').val()+"&datanasc="+$('#datanasc').val();  
 })
 </script>
 </html>
